[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/art/ingame/stage/minigame 2/enemy_sprite.png" type="Texture" id=1]
[ext_resource path="res://src/ingame/stage/minigame2/fighters/minion.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/animacoes/Enemy_dano.tres" type="Animation" id=3]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/animacoes/Enemy_idle.tres" type="Animation" id=4]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/animacoes/Enemy_soco.tres" type="Animation" id=5]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/animacoes/Enemy_walk.tres" type="Animation" id=6]
[ext_resource path="res://assets/art/ingame/stage/minigame 2/juiz.png" type="Texture" id=7]
[ext_resource path="res://src/ingame/stage/minigame2/fighters/juiz.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 10, 9.5 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=18]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 4 ]
}

[sub_resource type="Animation" id=19]
resource_name = "leavin"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 5, 2, 8 ]
}

[sub_resource type="Animation" id=20]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Juiz:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 0, 6 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "caido"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[sub_resource type="Animation" id=11]
resource_name = "dano_mais_forte"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=12]
resource_name = "desmaio"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=13]
resource_name = "recuperado"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}

[sub_resource type="Animation" id=14]
resource_name = "tentando"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 21 ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 11 )

[node name="minion" type="Area2D"]
z_index = 1
collision_layer = 32
script = ExtResource( 2 )

[node name="juiz" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 32
script = ExtResource( 9 )

[node name="colisao" type="CollisionShape2D" parent="juiz"]
shape = SubResource( 16 )

[node name="Juiz" type="Sprite" parent="juiz"]
position = Vector2( -2, -6 )
texture = ExtResource( 7 )
hframes = 3
vframes = 3
frame = 1

[node name="animation" type="AnimationPlayer" parent="juiz"]
anims/RESET = SubResource( 17 )
anims/idle = SubResource( 18 )
anims/leavin = SubResource( 19 )
anims/walk = SubResource( 20 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="juiz"]
scale = Vector2( 0.1875, 0.2 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/caido = SubResource( 15 )
anims/dano = ExtResource( 3 )
anims/dano_mais_forte = SubResource( 11 )
anims/desmaio = SubResource( 12 )
anims/idle = ExtResource( 4 )
anims/recuperado = SubResource( 13 )
anims/soco = ExtResource( 5 )
anims/tentando = SubResource( 14 )
anims/walk = ExtResource( 6 )

[node name="EnemySprite" type="Sprite" parent="."]
position = Vector2( 0, 4.5 )
scale = Vector2( 1, 0.71875 )
texture = ExtResource( 1 )
hframes = 4
vframes = 6

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 1

[node name="ataque-delay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_minion_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_minion_body_exited"]
[connection signal="timeout" from="ataque-delay" to="." method="_on_ataquedelay_timeout"]
